src/Tests/Error/TypeIterableError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeIterableError extends AssertError
{
}
